@@ -173,17 +173,19 @@ class RegisterPluginController extends AbstractPlugin
 		if (!$content) {
 			// Validate the token and initialize request parameters
 			$this->parameters = GeneralUtility::makeInstance('SJBR\\SrFeuserRegister\\Request\\Parameters', $this->extKey, $this->prefixId, $this->theTable, $this->conf, $this->piVars, $this);
-			if ($this->parameters->isTokenValid()) {
 				// Initialize the incoming and original data
 				$this->data = GeneralUtility::makeInstance('SJBR\\SrFeuserRegister\\Domain\\Data', $this->extKey, $this->prefixId, $this->theTable, $this->conf, $this->cObj, $this->parameters, $this->adminFieldList);
 				// Initialize the controller
 				$this->initialize();
 				// Initialize marker class
 				$this->marker = GeneralUtility::makeInstance('SJBR\\SrFeuserRegister\\View\\Marker', $this->extKey, $this->prefixId, $this->theTable, $this->conf, $this->parameters, $this->buttonLabelsList, $this->otherLabelsList);
+			if ($this->parameters->isTokenValid()) {
 				// Process the request
 				$content = $this->doProcessing($this->parameters->getCmd(), $this->parameters->getCmdKey(), $this->data->getOrigArray(), $this->data->getDataArray());
 			} else {
-				$content = LocalizationUtility::translate('invalidToken', $extensionName);
+				$this->marker->generateURLMarkers();
+				$plainView = GeneralUtility::makeInstance('SJBR\\SrFeuserRegister\\View\\PlainView', $this->extensionKey, $this->prefixId, $this->theTable, $this->conf, $this->data, $this->parameters, $this->marker);
+				$content = $plainView->render('###TEMPLATE_INVALID_TOKEN###', array(), array(), array(), '', '');
 			}
 		}
 		return CssUtility::wrapInBaseClass($this->prefixId, $content);
