@@ -1,7 +1,10 @@
+2015-12-09 Stanislas Rolland  <typo3(arobas)sjbr.ca>
+	* Fix for password edition after invitation acceptation
+	* Add template for invalid token
+
 2015-12-08 Stanislas Rolland  <typo3(arobas)sjbr.ca>
 	* Fix for password edition
 	* Fixes for files upload
-	* Fix for password edition after invitation acceptation
 
 2015-12-04 Stanislas Rolland  <typo3(arobas)sjbr.ca>
 	* Fix for the login forms
